Annotation @JsonAnyGetter usage