@@ -11,6 +11,9 @@
   <properties>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <junit.jupiter.version>5.8.1</junit.jupiter.version>
+    <junit.platform.version>1.8.1</junit.platform.version>
   </properties>
 
    <dependencies>
@@ -27,7 +30,76 @@
       <version>2.13.3</version>
     </dependency>
 
-  </dependencies>
+     <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+     <dependency>
+       <groupId>com.fasterxml.jackson.core</groupId>
+       <artifactId>jackson-databind</artifactId>
+       <version>2.13.3</version>
+     </dependency>
+
+     <dependency>
+       <groupId>org.junit.jupiter</groupId>
+       <artifactId>junit-jupiter-engine</artifactId>
+       <version>${junit.jupiter.version}</version>
+       <scope>test</scope>
+     </dependency>
+     <dependency>
+       <groupId>org.junit.jupiter</groupId>
+       <artifactId>junit-jupiter-api</artifactId>
+       <version>${junit.jupiter.version}</version>
+       <scope>test</scope>
+     </dependency>
+     <dependency>
+       <groupId>org.junit.jupiter</groupId>
+       <artifactId>junit-jupiter-params</artifactId>
+       <version>${junit.jupiter.version}</version>
+       <scope>test</scope>
+     </dependency>
+     <dependency>
+       <groupId>org.junit.platform</groupId>
+       <artifactId>junit-platform-suite</artifactId>
+       <version>${junit.platform.version}</version>
+       <scope>test</scope>
+     </dependency>
+
+     <!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-core -->
+     <dependency>
+       <groupId>org.hamcrest</groupId>
+       <artifactId>hamcrest-core</artifactId>
+       <version>2.2</version>
+       <scope>test</scope>
+     </dependency>
+
+   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.2</version>
+        <configuration>
+          <argLine>
+            --illegal-access=permit
+          </argLine>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>2.22.2</version>
+        <configuration>
+          <argLine>
+            --illegal-access=permit
+          </argLine>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
 
 </project>
